# fontbrew

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  README.md  install.sh  spec.md
.agents/skills/release-flow/: SKILL.md
.github/workflows/: ci.yml  release.yml
crates/fontbrew-cli/: Cargo.toml
crates/fontbrew-cli/src/: cli.rs  confirm.rs  exit.rs  main.rs  progress.rs  reporter.rs  self_update.rs
crates/fontbrew-cli/src/cli/: mod.rs
crates/fontbrew-cli/src/confirm/: mod.rs
crates/fontbrew-cli/src/progress/: mod.rs
crates/fontbrew-cli/src/reporter/: human.rs  json.rs  mod.rs
crates/fontbrew-cli/src/self_update/: mod.rs
crates/fontbrew-cli/tests/: cli.rs
crates/fontbrew-core/: Cargo.toml
crates/fontbrew-core/src/: activation.rs  app.rs  config.rs  error.rs  fetch.rs  fontbrew.rs  fonts.rs  fs.rs  github.rs  install.rs  lib.rs  manifest.rs  model.rs  platform.rs  providers.rs  registry.rs  search.rs  sources.rs  update.rs  version.rs
crates/fontbrew-core/src/activation/: mod.rs
crates/fontbrew-core/src/app/: mod.rs
crates/fontbrew-core/src/archives/: mod.rs
crates/fontbrew-core/src/config/: mod.rs
crates/fontbrew-core/src/fetch/: mod.rs
crates/fontbrew-core/src/fonts/: mod.rs
crates/fontbrew-core/src/fs/: mod.rs
crates/fontbrew-core/src/github/: mod.rs
crates/fontbrew-core/src/install/: apply.rs  mod.rs  plan.rs  prepare.rs  staging.rs
crates/fontbrew-core/src/manifest/: mod.rs
crates/fontbrew-core/src/model/: mod.rs
crates/fontbrew-core/src/platform/: mod.rs
crates/fontbrew-core/src/providers/: fontsource.rs  github.rs  mod.rs
crates/fontbrew-core/src/registry/: default_registry.json  mod.rs
crates/fontbrew-core/src/sources/: mod.rs
crates/fontbrew-core/src/tasks/: mod.rs
crates/fontbrew-core/src/update/: mod.rs
crates/fontbrew-core/src/version/: mod.rs
crates/fontbrew-core/tests/: activation.rs  archive_extraction.rs  font_metadata.rs  fontbrew_api.rs  fontsource_provider.rs  github_install.rs  local_archive.rs  manifest_persistence.rs  paths_config_filesystem.rs  registry.rs  search_outdated.rs  task3_paths_config_fs.rs  update.rs
crates/fontbrew-core/tests/support/: mod.rs
docs/: async-tokio-migration-plan.md  codex-review-smoke-test.md  core-api-redesign-plan.md  implementation-design.md  mvp-verification.md  product_spec.md
docs/adr/: 0001-package-boundaries-use-family-name-with-recipe-overrides.md  0001-package-boundaries-use-family-name.md  0002-activation-strategy-is-switchable.md  0003-manifest-records-local-font-state.md  0004-registry-is-curated-and-search-is-provider-backed.md  0005-github-versions-use-release-tags.md  0006-ambiguous-assets-require-explicit-selection.md  0007-conflicts-require-consent-and-do-not-adopt-fonts.md  0008-updates-use-conservative-two-phase-replacement.md  0009-use-fontbrew-as-product-and-cli-name.md  0010-mvp-supports-macos-only.md  0011-mvp-installs-desktop-font-formats-only.md  0012-registry-v1-is-a-single-json-file.md  0013-downloads-go-directly-to-managed-store.md  0014-mvp-does-not-retain-historical-font-versions.md
docs/issues/: fontbrew-mvp-issues.md
docs/research/: 2026-07-03-cli-output-streams.md  2026-07-03-tech-stack-research.md  2026-07-04-confirmation-boundaries.md  2026-07-04-unimplemented-product-features.md  macos-activation-spike.md
docs/superpowers/plans/: 2026-07-04-fontbrew-mvp.md  2026-07-04-fontbrew-planned-feature-gap-plan.md  2026-07-05-fontbrew-self-update.md
fixtures/fonts/: README.md  SourceCodePro-Collection.ttc
