[workspace]
members = ["crates/fontbrew-core", "crates/fontbrew-cli"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
directories = "6"
fs2 = "0.4"
globset = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
toml = "0.9"

[workspace.lints.rust]
unsafe_code = "forbid"
