[workspace]
members = ["crates/fontbrew-core", "crates/fontbrew-cli"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.6"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
directories = "6"
fs2 = "0.4"
globset = "0.4"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "=1.48.0", features = [
  "rt-multi-thread",
  "macros",
  "fs",
  "io-util",
  "sync",
] }
ttf-parser = "0.25.1"
toml = "0.9"
zip = { version = "4.6.1", default-features = false, features = [
  "deflate-flate2-zlib-rs",
] }

[workspace.lints.rust]
unsafe_code = "forbid"
