[package]
name = "fontbrew-cli"
edition.workspace = true
version.workspace = true

[[bin]]
name = "fontbrew"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
ctrlc = "3"
fontbrew-core = { path = "../fontbrew-core" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json.workspace = true
tempfile.workspace = true
zip.workspace = true

[lints]
workspace = true
