[package]
name = "fontbrew-core"
edition.workspace = true
version.workspace = true

[dependencies]
directories.workspace = true
globset.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true

[lints]
workspace = true
