[package]
name = "fontbrew-core"
edition.workspace = true
version.workspace = true

[dependencies]
directories.workspace = true
fs2.workspace = true
futures.workspace = true
globset.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
ttf-parser.workspace = true
zip.workspace = true

[lints]
workspace = true
